[Branch 1.4] Minor fix for too much padding under UL tags.

--- a/content/themes/default/css/style.css
+++ b/content/themes/default/css/style.css
@@ -18,7 +18,7 @@ p {
 	margin-bottom: 0.6em;
 }
 
-ul { list-style-type: none; }
+ul { list-style-type: none; margin-bottom: 0.3em; }
 li { padding: 0.5em 0 0.5em 0; margin-left: 0; }
 a { text-decoration: none; color: #666; }
 a:hover { color: #262626; background-color: #f8f8f8; }
